<resources>
    <string name="app_name">동네이션</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 로그인 -->
    <string name="login_title1">동네이션</string>
    <string name="login_title2">우리 동네 재능 공유</string>
    <string name="login_button_kakao">카카오 로그인</string>
    <string name="login_button_naver">네이버 로그인</string>
    <string name="login_button_google">구글 로그인</string>

    <string name="next">다음</string>
    <string name="start">시작하기</string>

    <!-- 채팅 목록 -->
    <string name="chatting_list_title">채팅 목록</string>
</resources>